--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
-
+patreon: 1amkaizen
 
 custom: ['https://trakteer.id/1amkaizen','https://www.buymeacoffee.com/1amkaiz3n']
