--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # These are supported funding model platforms
+github: 1amkaiz3n
 patreon: 1amkaizen
 
 custom: ['https://trakteer.id/1amkaizen','https://www.buymeacoffee.com/1amkaiz3n']
