--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
-# These are supported funding model platforms
 github: 1amkaiz3n
 patreon: 1amkaizen
-
-custom: ['https://trakteer.id/1amkaizen','https://www.buymeacoffee.com/1amkaiz3n']
+buy_me_a_coffee: 1amkaiz3n
